[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://data/Textures/Fonts/Base_Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://data/Scenes/HUD/Main_Menu/LoginMenu.gd" type="Script" id=3]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="PanelHost" type="Panel" parent="."]
margin_left = 889.0
margin_top = 282.0
margin_right = 1121.0
margin_bottom = 493.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateLabel" type="Label" parent="PanelHost"]
margin_right = 232.0
margin_bottom = 14.0
text = "Create Server
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtServerName" type="LineEdit" parent="PanelHost"]
margin_top = 21.0
margin_right = 232.0
margin_bottom = 45.0
text = "Server Name"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="PortLabel" type="Label" parent="PanelHost"]
margin_top = 45.0
margin_right = 232.0
margin_bottom = 76.0
text = "Port
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtServerPort" type="LineEdit" parent="PanelHost"]
margin_top = 68.0
margin_right = 232.0
margin_bottom = 92.0
text = "4546"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="MaxPlayerLabel" type="Label" parent="PanelHost"]
margin_top = 92.0
margin_right = 232.0
margin_bottom = 123.0
text = "Max Players"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtMaxPlayers" type="SpinBox" parent="PanelHost"]
margin_left = 15.0
margin_top = 119.0
margin_right = 232.0
margin_bottom = 143.0
min_value = 2.0
max_value = 16.0
value = 2.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btCreate" type="Button" parent="PanelHost"]
margin_top = 182.0
margin_right = 232.0
margin_bottom = 202.0
text = "Create Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelJoin" type="Panel" parent="."]
margin_left = 889.0
margin_top = 515.0
margin_right = 1121.0
margin_bottom = 679.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinServerLabel" type="Label" parent="PanelJoin"]
margin_right = 232.0
margin_bottom = 14.0
text = "Join Server"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtJoinIP" type="LineEdit" parent="PanelJoin"]
margin_top = 24.0
margin_right = 232.0
margin_bottom = 48.0
text = "127.0.0.1"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="PortLabel" type="Label" parent="PanelJoin"]
margin_top = 56.0
margin_right = 232.0
margin_bottom = 70.0
text = "Port"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="txtJoinPort" type="LineEdit" parent="PanelJoin"]
margin_top = 77.0
margin_right = 232.0
margin_bottom = 101.0
text = "4546"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="btJoin" type="Button" parent="PanelJoin"]
margin_top = 126.0
margin_right = 232.0
margin_bottom = 146.0
text = "Join"

[node name="PanelPlayer" type="Panel" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 889.0
margin_top = -422.0
margin_right = 1121.0
margin_bottom = -279.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="PanelPlayer"]
margin_top = 14.0
margin_right = 109.0
margin_bottom = 28.0
text = "Enter your name:"

[node name="txtPlayerName" type="LineEdit" parent="PanelPlayer"]
margin_top = 33.0
margin_right = 232.0
margin_bottom = 57.0
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelPlayer"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerIcon" type="Sprite" parent="PanelPlayer"]
position = Vector2( 45, 99 )
texture = ExtResource( 1 )

[node name="btColor" type="ColorPickerButton" parent="PanelPlayer"]
margin_left = 89.0
margin_top = 75.0
margin_right = 184.0
margin_bottom = 95.0
color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btDefaultColor" type="Button" parent="PanelPlayer"]
margin_left = 89.0
margin_top = 105.0
margin_right = 184.0
margin_bottom = 125.0
text = "Default Color"

[node name="Back" type="Button" parent="."]
margin_left = 889.0
margin_top = 849.0
margin_right = 1121.0
margin_bottom = 893.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PanelHost/btCreate" to="." method="_on_btCreate_pressed"]
[connection signal="pressed" from="PanelJoin/btJoin" to="." method="_on_btJoin_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
